Nueva interfaz de comando

--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,7 @@
 <h1>SASS</h1>
 <h2>Developed by Rivero, Berni & Agustina</h2>
+<form method="post" action="/sendcommands">
+    <input name="cmd" type="text" placeholder="comandament"/>
+    <input name="endp" type="text" placeholder="clients"/>
+    <input type="submit" value="Submit">
+</form>
